revert to version 530