@@ -1,26 +1,32 @@
 package org.madprod.freeboxmobile.remotecontrol;
 
 import java.io.IOException;   
-import java.net.URL;
-import java.net.URLConnection;
+import java.net.InetSocketAddress;
+import java.net.Socket;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.HashMap;
 
 import org.apache.http.client.ClientProtocolException;
+import org.apache.http.client.methods.HttpGet;
+import org.apache.http.impl.client.DefaultHttpClient;
 import org.madprod.freeboxmobile.Constants;
 
 import android.app.Activity;
 import android.content.Context;
 import android.content.SharedPreferences;
+import android.preference.PreferenceManager;
 import android.util.Log;
 
 @SuppressWarnings("serial")
 public class CommandManager extends Activity implements Constants{
 	private static CommandManager cm = new CommandManager();
+	private final DefaultHttpClient httpClient = new DefaultHttpClient();
 	static final String TAG	= "FBM";
 	private static HashMap<String, Boolean> adresses = new HashMap<String, Boolean>(){
 		{
-			put("hd1.freebox.fr", true);
-			put("hd2.freebox.fr", true);			
+			put("hd1.freebox.fr", false);
+			put("hd2.freebox.fr", false);			
 		}
 	};
 
@@ -41,27 +47,27 @@ public class CommandManager extends Activity implements Constants{
 		return cm;
 	}
 
-//	public int refreshAdresses(){
-//		int count = 0;
-//		Log.d(TAG, "Rafraichissement des adresses");
-//		for (String adresse : adresses.keySet()){
-//			Log.d(TAG, "Adresse "+adresse);
-//			Socket s = new Socket();
-//			try {
-//				s.setSoTimeout(2000);
-//				s.connect(new InetSocketAddress(adresse, 80), 2000);
-//				adresses.put(adresse, true);
-//				count++;
-//				s.close();
-//			} catch (IOException e) {
-//				adresses.put(adresse, false);					
-//			}
-//			Log.d(TAG, "Result : "+adresses.get(adresse));
-//
-//		}
-//		Log.d(TAG, "Nb Boitiers OK : "+count);
-//		return count;
-//	}
+	public int refreshAdresses(){
+		int count = 0;
+		Log.d(TAG, "Rafraichissement des adresses");
+		for (String adresse : adresses.keySet()){
+			Log.d(TAG, "Adresse "+adresse);
+			Socket s = new Socket();
+			try {
+				s.setSoTimeout(2000);
+				s.connect(new InetSocketAddress(adresse, 80), 2000);
+				adresses.put(adresse, true);
+				count++;
+				s.close();
+			} catch (IOException e) {
+				adresses.put(adresse, false);					
+			}
+			Log.d(TAG, "Result : "+adresses.get(adresse));
+
+		}
+		Log.d(TAG, "Nb Boitiers OK : "+count);
+		return count;
+	}
 
 	public void sendCommand(String cmd, boolean longClick, int repeat){
 		sendCommand(cmd.trim()+"&long="+longClick+"&repeat="+repeat);
@@ -77,26 +83,15 @@ public class CommandManager extends Activity implements Constants{
 
 	public void sendCommand(String cmd){
 		Log.d(TAG, "Envoi de la commande : "+cmd);
-//		refreshAdresses();
 		for (String adresse : adresses.keySet()){
-			Log.d(TAG, "adresse : "+adresse);
-			Log.d(TAG, "etat : "+adresses.get(adresse));
-			Log.d(TAG, "code : "+codes.get(adresse));
 			if (adresses.get(adresse) && codes.get(adresse) != null){
-				Log.d(TAG, "Envoi a l adresse : "+adresse +" la commande : http://"+adresse+"/pub/remote_control?code="+codes.get(adresse)+"&key="+cmd);
+				Log.d(TAG, "Envoi a l adresse : "+adresse);
 				try {
-//					URI uri = new URI("http://"+adresse+"/pub/remote_control?code="+codes.get(adresse)+"&key="+cmd);
-//					HttpGet methodGet = new HttpGet(uri);
-					URL url = new URL("http://"+adresse+"/pub/remote_control?code="+codes.get(adresse)+"&key="+cmd);
-					URLConnection urlConn = url.openConnection(); 
-					urlConn.setDoInput(true); 
-					urlConn.setUseCaches(false);
-					urlConn.getContentLength();
-
-					
-//					httpClient.execute(methodGet);																											
-//				} catch (URISyntaxException e) {
-//					e.printStackTrace();
+					URI uri = new URI("http://"+adresse+"/pub/remote_control?code="+codes.get(adresse)+"&key="+cmd);
+					HttpGet methodGet = new HttpGet(uri);
+					httpClient.execute(methodGet);																											
+				} catch (URISyntaxException e) {
+					e.printStackTrace();
 				} catch (ClientProtocolException e) {
 					e.printStackTrace();
 				} catch (IOException e) {
